# CaraReport

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
CMake/: CaraTest.cmake  carareport.pc.in
Examples/: CMakeLists.txt  main.cpp
Examples/C/: CMakeLists.txt  main.c
Examples/CPP/: CMakeLists.txt  main.cpp
Examples/CSharp/: CaraReport.cs  Program.cs  README.md
Source/: CMakeLists.txt  CaraReport.h
Source/CaraReport/: API.h  C.cpp  C.h  Colors.cpp  Colors.h  Label.cpp  Label.h  Level.cpp  Level.h  Report.cpp  Report.h  Source.cpp  Source.h  Span.cpp  Span.h  Theme.cpp  Theme.h  Writer.cpp  Writer.h
Tests/: CMakeLists.txt  CaraReportCApiTests.cpp  CaraReportTests.cpp  test.cpp
